--- a/share/po/fr.po
+++ b/share/po/fr.po
@@ -17,57 +17,57 @@ msgstr ""
 
 #: lib/Jifty/Action/Record/Search.pm:125
 msgid "!=>< allowed"
-msgstr ""
+msgstr "!=>< autorisés"
 
 #: lib/Jifty/Action/Record/Search.pm:115 lib/Jifty/z:26
 #. ($label)
 msgid "%1 after"
-msgstr ""
+msgstr "%1 aprés"
 
 #: lib/Jifty/Action/Record/Search.pm:116 lib/Jifty/z:27
 #. ($label)
 msgid "%1 before"
-msgstr ""
+msgstr "%1 avant"
 
 #: lib/Jifty/Action/Record/Search.pm:112
 #. ($label)
 msgid "%1 contains"
-msgstr ""
+msgstr "%1 contient"
 
 #: lib/Jifty/Action/Record/Search.pm:123 lib/Jifty/z:35
 #. ($label)
 msgid "%1 greater or equal to"
-msgstr ""
+msgstr "%1 supérieur ou égal à"
 
 #: lib/Jifty/Action/Record/Search.pm:121 lib/Jifty/z:32
 #. ($label)
 msgid "%1 greater than"
-msgstr ""
+msgstr "%1 supérieur à"
 
 #: lib/Jifty/Action/Record/Search.pm:108
 #. ($label)
 msgid "%1 is not"
-msgstr ""
+msgstr "%1 n'est pas"
 
 #: lib/Jifty/Action/Record/Search.pm:113
 #. ($label)
 msgid "%1 lacks"
-msgstr ""
+msgstr "%1 ne contient pas"
 
 #: lib/Jifty/Action/Record/Search.pm:124 lib/Jifty/z:36
 #. ($label)
 msgid "%1 less or equal to"
-msgstr ""
+msgstr "%1 inférieur ou égal"
 
 #: lib/Jifty/Action/Record/Search.pm:122 lib/Jifty/z:33
 #. ($label)
 msgid "%1 less than"
-msgstr ""
+msgstr "%1 inférieur à"
 
 #: share/web/templates/__jifty/error/mason_internal_error:30 share/web/templates/__jifty/error/mason_internal_error:34 share/web/templates/__jifty/error/mason_internal_error:38
 #. ($path, $line)
 msgid "%1 line %2"
-msgstr ""
+msgstr "%1 ligne %2"
 
 #: share/web/templates/__jifty/halo:119
 #. ($_->[3])
@@ -77,12 +77,12 @@ msgstr "%1 secondes"
 #: lib/Jifty/Action/Record/Search.pm:117 lib/Jifty/z:28
 #. ($label)
 msgid "%1 since"
-msgstr ""
+msgstr "%1 depuis le"
 
 #: lib/Jifty/Action/Record/Search.pm:118 lib/Jifty/z:29
 #. ($label)
 msgid "%1 until"
-msgstr ""
+msgstr "%1 depuis"
 
 #: lib/Jifty/Action/Record/Search.pm:77
 msgid "(any)"
@@ -110,24 +110,24 @@ msgstr "Erreur. Ré-essayez plus tard"
 
 #: lib/Jifty/Action/Record/Search.pm:129
 msgid "Any field contains"
-msgstr ""
+msgstr "Un champs contient"
 
 #: share/web/templates/__jifty/admin/action/dhandler:25 share/web/templates/__jifty/admin/model/dhandler:20
 msgid "Back to the admin console"
-msgstr ""
+msgstr "Retour à l'interface d'admin"
 
 #: share/web/templates/__jifty/admin/index.html:29
 msgid "Back to the application"
-msgstr ""
+msgstr "Retour à l'application"
 
 #: share/web/templates/helpers/calendar.html:4
 #. (_ &><body class="calpopup"><a href="#" onclick="window.close()
 msgid "Calendar"
-msgstr ""
+msgstr "Calendrier"
 
 #: share/web/templates/__jifty/admin/fragments/list/update:28
 msgid "Cancel"
-msgstr ""
+msgstr "Annuler"
 
 #: share/web/templates/helpers/calendar.html:4
 msgid "Close window"
@@ -135,11 +135,11 @@ msgstr "Fermer la fenêtre"
 
 #: share/web/templates/__jifty/admin/fragments/list/view:29
 msgid "Confirm delete?"
-msgstr ""
+msgstr "Confirmer l'effacment ?"
 
 #: share/web/templates/__jifty/admin/fragments/list/new_item:17
 msgid "Create"
-msgstr ""
+msgstr "Enregistrer"
 
 #: lib/Jifty/Action/Record/Create.pm:81
 #. (ref($record)
@@ -156,7 +156,7 @@ msgstr "Administration de la Base de Données"
 
 #: share/web/templates/__jifty/admin/fragments/list/view:26
 msgid "Delete"
-msgstr ""
+msgstr "Effacer"
 
 #: lib/Jifty/Action/Record/Delete.pm:76
 msgid "Deleted"
@@ -164,7 +164,7 @@ msgstr "Effacé"
 
 #: share/web/templates/__jifty/admin/fragments/list/view:37
 msgid "Edit"
-msgstr ""
+msgstr "Editer"
 
 #: lib/Jifty/Mason/Halo.pm:104
 #. ($comp_name)
@@ -194,7 +194,7 @@ msgstr "Chargement..."
 
 #: share/web/templates/__jifty/error/mason_internal_error:1
 msgid "Mason error"
-msgstr ""
+msgstr "Erreur Mason"
 
 #: share/web/templates/__jifty/admin/index.html:9
 msgid "Models"
@@ -202,11 +202,11 @@ msgstr "Modèles"
 
 #: share/web/templates/__jifty/admin/fragments/list/list:73
 msgid "Next Page"
-msgstr ""
+msgstr "Page Suivante"
 
 #: lib/Jifty/Action/Record/Search.pm:130
 msgid "No field contains"
-msgstr ""
+msgstr "Aucun champ contient"
 
 #: lib/Jifty/Web.pm:297
 msgid "No request to handle"
@@ -219,7 +219,7 @@ msgstr "Documentation en ligne"
 #: share/web/templates/__jifty/admin/fragments/list/list:45
 #. ($page, $collection->pager->last_page)
 msgid "Page %1 of %2"
-msgstr ""
+msgstr "Page %1 / %2"
 
 #: lib/Jifty/Record.pm:240 lib/Jifty/Record.pm:319 lib/Jifty/Record.pm:60
 msgid "Permission denied"
@@ -227,7 +227,7 @@ msgstr "Autorisation refusée"
 
 #: share/web/templates/__jifty/admin/fragments/list/list:68
 msgid "Previous Page"
-msgstr ""
+msgstr "Page précédente"
 
 #:
 msgid "Record created"
@@ -235,7 +235,7 @@ msgstr "Enregistrement créé"
 
 #: share/web/templates/__jifty/admin/action/dhandler:20
 msgid "Run the action"
-msgstr ""
+msgstr "Exécuter l'action"
 
 #: share/web/templates/__jifty/halo:111
 msgid "SQL Statements"
@@ -243,7 +243,7 @@ msgstr ""
 
 #: share/web/templates/__jifty/admin/fragments/list/update:18
 msgid "Save"
-msgstr ""
+msgstr "Enregistrer"
 
 #: share/web/templates/__jifty/online_docs/content.html:50
 msgid "Schema"
@@ -251,7 +251,7 @@ msgstr "Schéma"
 
 #: share/web/templates/__jifty/admin/fragments/list/search:18
 msgid "Search"
-msgstr ""
+msgstr "Chercher"
 
 #: share/web/templates/dhandler:1
 msgid "Something's not quite right"
@@ -283,15 +283,15 @@ msgstr "Cette page vous permet de gérer vos enregistrements dans la base. Vous t
 
 #: share/web/templates/__jifty/admin/index.html:7
 msgid "To disable this administrative console, add \"AdminMode: 0\" under the \"framework:\" settings in the config file (etc/config.yml)."
-msgstr ""
+msgstr "Pour désactiver cette console d'administration, ajoutez \"AdminMode: 0\" dans la rubrique \"framework:\" du fichier de configuration (etc/config.yml)."
 
 #: share/web/templates/__jifty/admin/fragments/list/list:38
 msgid "Toggle search"
-msgstr ""
+msgstr "Rechercher"
 
 #: share/web/templates/__jifty/error/mason_internal_error:6
 msgid "Try again"
-msgstr ""
+msgstr "Ré-essayer"
 
 #: lib/Jifty/Action/Record/Update.pm:156
 msgid "Updated"
@@ -316,4 +316,4 @@ msgstr ""
 
 #: share/web/templates/_elements/sidebar:7
 msgid "You're not currently signed in."
-msgstr ""
+msgstr "Vous n'êtes pas encore connecté."
