[share/po/zh_cn.po] s/数据瘤/数据库/
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2374 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/po/zh_cn.po
+++ b/share/po/zh_cn.po
@@ -157,7 +157,7 @@ msgstr "成功建立项目."
 
 #: share/web/templates/__jifty/admin/index.html:3
 msgid "Database Administration"
-msgstr "数据瘤管理"
+msgstr "数据库管理"
 
 #: share/web/templates/__jifty/admin/fragments/list/view:29
 msgid "Delete"
