Use Traditional Chinese characters in zh_tw
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2377 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/po/zh_tw.po
+++ b/share/po/zh_tw.po
@@ -157,7 +157,7 @@ msgstr "成功建立項目."
 
 #: share/web/templates/__jifty/admin/index.html:3
 msgid "Database Administration"
-msgstr "資料库管理"
+msgstr "資料庫管理"
 
 #: share/web/templates/__jifty/admin/fragments/list/view:29
 msgid "Delete"
