--- a/debian/README
+++ b/debian/README
@@ -2,7 +2,7 @@ This directory contains Debian packaging files for Jifty.
 
 There is a debian repository at:
 
- deb http://ftp.univ-metz.fr/debian sarge jifty
+ deb http://debian.jifty.org/debian sarge jifty
 
 It contains jifty packages as well as some jifty plugins, updates for
 sarge and ubuntu 6.06 LTS
