* Cookbook typo fixed. thanks to tokuhirom
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2427 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -50,7 +50,7 @@ And add this in F<MyApp/Dispatcher.pm> to make URI look prettier:
         show('/feed');
     };
     
-And of course, you need to put these in your HTML header tempalte
+And of course, you need to put these in your HTML header template
 (conventionally that's C</_elements/header>):
 
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/feed/atom" />
