--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -225,7 +225,7 @@ field is changed.
 
 Of course, you can apply the same trick to your own Action classes.
 
-=head2 Get the "Edit" links to work in the "Page info" tool.
+=head2 Get the "Edit" links to work in the "Page info" tool
 
 If you click on "Page info", follow an "Edit" link for a fragment,
 and you get an error message saying something like
@@ -238,7 +238,7 @@ installed with the rest of the Jifty modules.
 
 	perl -MJifty::Util -e 'print Jifty::Util->jifty_root'
 
-will tell you where to look. If its not there you will need to install
+will tell you where to look. If it's not there you will need to install
 it manually. If you still have your build files from installing Jifty
 you can find the module in the F<plugins> directory.
 
@@ -256,4 +256,4 @@ Change it to
 
 Take care the indentation is significant. Use spaces, not tabs.
 Once you have done that you can restart your Jifty application and the
-edit links should now function correctly.
+edit links should then function correctly.
