* 'length is 42' does not work with Object::Declare, due to how it    parses.  Normally, 'foo is 42' is parsed as 'is->foo(42)', and the    method call is caught.  With built-ins like 'length', however, perl    parses it as 'length(is(42))'.
   Jifty::DBI::Schema has a working 'length is 42' because it does not
   use Object::Declare.  It exports 'length' and 'is', and expects it
   to be parsed as 'length(is(42))'.

   We instead use 'max_length is 42' instead of 'length is 42'.

git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2480 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Actions.pod
+++ b/lib/Jifty/Manual/Actions.pod
@@ -77,12 +77,12 @@ some types and labels:
 
     param title =>
         label is 'Title',
-        length is 50,
+        max_length is 50,
         is mandatory;
 
     param category => 
         label is 'Category',
-        length is 30;
+        max_length is 30;
 
     param body =>
         label is 'Entry',
