* Tutorial_de retitled to not conflict with the english one.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@2505 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Tutorial_de.pod
+++ b/lib/Jifty/Manual/Tutorial_de.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-Jifty::Manual::Tutorial - Einführung in Jifty
+Jifty::Manual::Tutorial_de - Einführung in Jifty
 
 =head1 BESCHREIBUNG
 
